--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ dev_dependencies:
   freezed: ^1.1.1
   json_serializable: ^6.1.4
   lint: ^1.5.3
+  msix: ^3.6.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
