--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
       path: custom
       ref: 2bdd680eea4c74a2067f82d48d720d7efd9fdfe3
   dartz: ^0.10.1
-  desktop_window_utils: ^0.0.3
+  # desktop_window_utils: ^0.0.3
   dio: ^4.0.0
   environments:
     git:
@@ -40,7 +40,7 @@ dependencies:
     git:
       url: https://github.com/justkawal/excel.git
       ref: null-safety
-  filepicker_windows: ^2.0.0
+  filepicker_windows: ^2.0.2
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
@@ -94,6 +94,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/pdf/
+    - assets/images/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -119,14 +120,14 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
 
-msix_config:
-  display_name: Annai Store
-  publisher_display_name: Agnel Selvan
-  identity_name: com.software.annai_store
-  msix_version: 1.0.0.0
-  logo_path: C:\Users\Agnel.Selvan\OneDrive - Aurum\Documents\some\assets\images\annai_store.png
-  capabilities:
-  debug: false
-  output_path: C:\Users\Agnel.Selvan\OneDrive - Aurum\Desktop\
-  output_name: testing
-  build_windows: true
+# msix_config:
+#   display_name: Annai Store
+#   publisher_display_name: Agnel Selvan
+#   identity_name: com.software.annai_store
+#   msix_version: 1.0.0.0
+#   logo_path: C:\Users\Agnel.Selvan\OneDrive - Aurum\Documents\some\assets\images\annai_store.png
+#   capabilities:
+#   debug: false
+#   output_path: C:\Users\Agnel.Selvan\OneDrive - Aurum\Desktop\
+#   output_name: testing
+#   build_windows: true
