--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 # Dependencies specif
 dependencies:
   barcode: ^2.1.0
+  crypto: ^3.0.2
   cupertino_icons: ^1.0.2
   custom:
     git:
@@ -30,8 +31,8 @@ dependencies:
       path: custom
       ref: 2bdd680eea4c74a2067f82d48d720d7efd9fdfe3
   dartz: ^0.10.1
-  # desktop_window_utils: ^0.0.3
   dio: ^4.0.0
+  encrypt: ^5.0.1
   environments:
     git:
       url: https://github.com/AgnelSelvan/custom_packages_flutter.git
@@ -45,10 +46,14 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.0.1
   flutter_screenutil: ^5.0.0+2
+  flutter_secure_storage: ^8.0.0
   flutter_typeahead: ^3.1.3
   freezed_annotation: ^1.1.0
   get: ^4.1.4
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   http: ^0.13.3
+  intl: null
   json_annotation: ^4.0.1
   localstorage: ^4.0.0+1
   menubar:
@@ -61,14 +66,13 @@ dependencies:
   pdf: ^3.4.2
   printing: ^5.2.1
   screenshot: ^1.2.3
-  intl:
   syncfusion_flutter_barcodes: ^19.4.42
   uuid: ^3.0.4
   validators:
     git:
       url: https://github.com/AgnelSelvan/custom_packages_flutter.git
       path: validators
-    
+  window_manager: ^0.3.2
   window_size:
     git:
       url: https://github.com/google/flutter-desktop-embedding.git
@@ -82,6 +86,8 @@ dev_dependencies:
   json_serializable: ^6.1.4
   lint: ^1.5.3
   msix: ^3.6.2
+  hive_generator:
+  source_gen:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
