--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   flutter_screenutil: ^5.0.0+2
   flutter_secure_storage: ^8.0.0
   flutter_typeahead: ^3.1.3
-  freezed_annotation: ^1.1.0
+  # freezed_annotation: ^1.1.0
   get: ^4.1.4
   hive: ^2.2.3
   hive_flutter: ^1.1.0
