--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,6 @@ dependencies:
   flutter_screenutil: ^5.0.0+2
   flutter_secure_storage: ^8.0.0
   flutter_typeahead: ^3.1.3
-  # freezed_annotation: ^1.1.0
   get: ^4.1.4
   hive: ^2.2.3
   hive_flutter: ^1.1.0
@@ -67,6 +66,8 @@ dependencies:
   printing: ^5.2.1
   screenshot: ^1.2.3
   syncfusion_flutter_barcodes: ^19.4.42
+  syncfusion_flutter_charts: null
+  syncfusion_flutter_datepicker: null
   uuid: ^3.0.4
   validators:
     git:
@@ -83,11 +84,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: ^1.1.1
+  hive_generator: null
   json_serializable: ^6.1.4
   lint: ^1.5.3
   msix: ^3.6.2
-  hive_generator:
-  source_gen:
+  source_gen: null
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
