--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,11 +25,6 @@ dependencies:
   barcode: ^2.1.0
   crypto: ^3.0.2
   cupertino_icons: ^1.0.2
-  # custom:
-  #   git:
-  #     url: https://github.com/AgnelSelvan/custom_packages_flutter.git
-  #     path: custom
-  #     ref: 2bdd680eea4c74a2067f82d48d720d7efd9fdfe3
   dartz: ^0.10.1
   dio: ^4.0.0
   encrypt: ^5.0.1
@@ -37,8 +32,9 @@ dependencies:
     git:
       url: https://github.com/AgnelSelvan/custom_packages_flutter.git
       path: environments
+  equatable: ^2.0.5
   excel: ^2.1.0
-  file_picker:
+  file_picker: null
   filepicker_windows: ^2.0.2
   flutter:
     sdk: flutter
@@ -46,6 +42,7 @@ dependencies:
   flutter_screenutil: ^5.8.4
   flutter_secure_storage: ^8.0.0
   flutter_typeahead: ^3.1.3
+  function_tree: ^0.9.0
   get: ^4.1.4
   hive: ^2.2.3
   hive_flutter: ^1.1.0
@@ -79,15 +76,17 @@ dependencies:
       path: plugins/window_size
 
 dev_dependencies:
-  build_runner: null
+  build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
-  freezed: ^1.1.1
-  hive_generator: null
-  json_serializable: ^6.1.4
-  lint: ^1.5.3
+  freezed: ^2.4.5
+  hive_generator: ^2.0.1
+  json_serializable: ^6.7.1
+  lint: ^2.1.2
   msix: ^3.6.2
-  # source_gen: null
+
+dependency_overrides:
+  watcher: ^1.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -98,9 +97,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/pdf/
-    - assets/images/
+  # assets:
+  # - assets/pdf/
+  # - assets/images/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
