--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
+  flutter_p2p_plus: ^1.0.2
   flutter_screenutil: ^5.8.4
   flutter_secure_storage: ^8.0.0
   flutter_typeahead: ^3.1.3
@@ -74,6 +75,7 @@ dependencies:
     git:
       url: https://github.com/google/flutter-desktop-embedding.git
       path: plugins/window_size
+  tcp_socket_connection: ^0.3.1
 
 dev_dependencies:
   build_runner: ^2.4.6
