--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_typeahead: ^3.1.3
   function_tree: ^0.9.0
   get: ^4.1.4
+  get_it: ^7.6.7
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   http: ^0.13.3
@@ -139,10 +140,10 @@ flutter:
 #   output_path: C:\Users\Agnel.Selvan\OneDrive - Aurum\Desktop\
 #   output_name: testing
 #   build_windows: true
-
 flutter_launcher_icons:
   windows:
     generate: true
     image_path: "assets/images/annai_traders.png"
-    icon_size: 48 
+    icon_size: 48
+
 # flutter pub run flutter_launcher_icons -f flutter_launcher_icons.yaml
